k8s/kafka.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: zlinebot-automos-kafka
spec:
  selector:
    matchLabels:
      app: zlinebot-automos-kafka
  template:
    metadata:
      labels:
        app: zlinebot-automos-kafka
    spec:
      securityContext:
        fsGroup: 1001
        runAsNonRoot: true
      containers:
        - name: kafka
          image: bitnami/kafka:3.7.0@sha256:5555555555555555555555555555555555555555555555555555555555555555
          ports:
            - containerPort: 9092
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: false
            runAsNonRoot: true
            runAsUser: 1001
          resources:
            requests:
              cpu: "250m"
              memory: "512Mi"
            limits:
              cpu: "1"
              memory: "1Gi"
---
apiVersion: v1
kind: Service
metadata:
  name: kafka
spec:
  selector:
    app: zlinebot-automos-kafka
  ports:
    - port: 9092
      targetPort: 9092
