k8s/redis.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: zlinebot-automos-redis
spec:
  selector:
    matchLabels:
      app: zlinebot-automos-redis
  template:
    metadata:
      labels:
        app: zlinebot-automos-redis
    spec:
      securityContext:
        fsGroup: 1001
        runAsNonRoot: true
      containers:
        - name: redis
          image: redis:7.2.5-alpine@sha256:4444444444444444444444444444444444444444444444444444444444444444
          ports:
            - containerPort: 6379
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: false
            runAsNonRoot: true
            runAsUser: 1001
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: redis
spec:
  selector:
    app: zlinebot-automos-redis
  ports:
    - port: 6379
      targetPort: 6379
