k8s/zlinebot-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: zlinebot-service
spec:
  type: LoadBalancer
  selector:
    app: zlinebot
  ports:
    - port: 80
      targetPort: 3000
